syntax = "proto3";

package com.smartorder.inventory.grpc;

option java_multiple_files = true;
option java_package = "com.smartorder.inventory.grpc";
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc CheckStock (StockRequest) returns (StockResponse);
}

message StockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
  string message = 2;
}
